Added urlrewrite and compile memory args to build.gradle