@@ -28,6 +28,7 @@ targetCompatibility = 1.7
 dependencies {
 
     compile("org.apache.commons:commons-lang3:3.4")
+    compile("commons-httpclient:commons-httpclient:3.1")
     compile("org.hsqldb:hsqldb")
     compile("org.springframework.boot:spring-boot-starter")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
@@ -35,12 +36,16 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
+    compile("org.tuckey:urlrewritefilter:4.0.4")
 
     testCompile("junit:junit")
     testCompile("org.mockito:mockito-all:1.10.19")
 }
 
 tasks.withType(JavaCompile) {
+
+    options.fork = true
+    options.forkOptions.jvmArgs += ["-Xmx32m", "-XX:MaxPermSize=32m"]
     options.compilerArgs << "-Xlint:unchecked"
 }
 
